syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartdoor.smarthome";


service SmartDoor {
    rpc switchOn(SwitchStatus) returns (SwitchStatus) {}
    rpc switchOff(SwitchStatus) returns (SwitchStatus) {}
    rpc openDoor(DoorRequest) returns (DoorResponse) {}
    rpc closeDoor(DoorRequest) returns (DoorResponse) {}
    rpc lockDoor(LockRequest) returns (LockResponse) {}
    rpc unlockDoor(LockRequest) returns (LockResponse) {}
}

message SwitchStatus{
  bool switchOnOff= 1;
}

message DoorRequest{
  bool openOnOff= 1;
  string statusMsg = 2;
}
message DoorResponse{
  bool openOnOff= 1;
  string statusMsg = 2;
}
message LockRequest{
  bool lockOnOff= 1;
  string statusMsg = 2;  
}
message LockResponse{
  bool lockOnOff= 1;
  string statusMsg = 2;  
}